--- a/app_console/templates/console/oss/browser.html
+++ b/app_console/templates/console/oss/browser.html
@@ -296,8 +296,8 @@ async function loadObjects() {
                     <td>${formatDate(obj.lastModified)}</td>
                     <td>
                         <div class="flex space-x-2">
-                            <button onclick="downloadObject('${obj.key}')" class="btn btn-outline btn-sm">下载</button>
-                            <button onclick="deleteObject('${obj.key}')" class="btn btn-danger btn-sm">删除</button>
+                            <button type="button" onclick="downloadObject('${obj.key}')" class="btn btn-outline btn-sm p-1.5" title="下载"><svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"/></svg></button>
+                            <button type="button" onclick="deleteObject('${obj.key}')" class="btn btn-danger btn-sm p-1.5" title="删除"><svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"/></svg></button>
                         </div>
                     </td>
                 </tr>
